webcompat/static/css/main.css
/* ... */
label {
  float: left;
}
/* 990px */
@media all and (max-width: 61.865em) {
  label {
    float: none;
  }
}
.label {
  padding-left: 0;
}
form.cf {
  background: #fff;
  padding: 3em 5em 2em 5em;
/*  -webkit-border-radius: 20px;
  -moz-border-radius: 20px;
  border-radius: 20px;*/
}
#new-report h2 {
  font: #fff;
  margin-left: 0;
  margin-bottom: 1em;
}
.form-control {
  border-radius: 20px;
  padding: 0.5em;
}
form .button {
  margin-top: 0.25em;
  margin-bottom: 0.5em;
  padding-top: 0.25em;
  padding-bottom: 0.25em;
}
#submitanon {
  float: left;
}
#submitgithub {
  float: right;
  margin: 0 auto;
}
#submitdiv {
  display: block;
  font-weight: 700;
  border-top: 5px solid var(--wb-background-dark);
  width: 30px;
  margin: 1em 0 0;
  color: #fff;
  display: block;
}
.row {
  padding: .5em;
}
.row:last-child p:not(.issue-metadata) {
  margin-bottom: 0.5em;
  color: #000;
}

/* bootstrap overrides */
.radio-inline, .checkbox-inline {
  /* Hack to get Chrome 24+ to behave.
  See https://github.com/twbs/bootstrap/issues/6599 */
  white-space: nowrap;
}
.radio, .radio-inline {
  padding-left: 15px;
  margin-right: 8px;
  margin-left: 8px;
  width:100%;
  height: 34px;
  position: relative;
}
.radio label, .radio-inline label {
  font-weight: 300;
  float: none;
}
.radio input,
.radio-inline input {
  position: absolute;
  left: 10px;
  top: 0px;
}
/* bootstrap override */
.radio-inline + .radio-inline {
  margin-left: 8px;
}
#site-owner {
  display:block;
  text-align: left;
}
/* `ruby -e 'puts "skcah top yenoh".reverse'` */
.col-dm-12 {
  display: none !important;
}
/*------Form Validation------*/
.has-error .form-control {
  border-color: #ff0000;
}
.has-error .form-control:focus{
  border-color: #ff0000;
  box-shadow:none;
}
.has-error .help-inline {
  color: #ff0000;
  float: right;
}

/* 600px */
@media all and (max-width: 37.49em) {
  .flourish {
    display: none;
  }

  .submit {
    float: left;
    margin: 0 0 1em;
  }
  .col-md-6.submit, .col-md-6 button {
    width: 100%;
  }
  .has-error .help-inline {
    float: none;
    display: block;
  }
}
.validation-wrapper {
  display: block;
  clear: both;
  position: relative;
}
.validation-wrapper::after {
  content: '';
  display: block;
  width: 60px;
  height: 20px;
  position: absolute;
  right: 12px;
  top: 8px;
  background-repeat: no-repeat;
  background-size: contain;
}
.validation-wrapper input {
  padding-right: 40px;
}
.no-error .validation-wrapper::after {
  background-image: url(../img/valid.svg);
}
.has-error .validation-wrapper::after {
  background-image: url(../img/invalid.svg);
}
.no-error .help-inline {
  display: none;
}
.no-error .form-control {
  border-color: var(--wb-background-dark);
}
.no-error .form-control:focus{
  border-color: var(--wb-background-dark);
  box-shadow:none;
}
.disabled {
  opacity: 0.5;
}
/*------Thanks Page------*/
.thanks p {
  margin-bottom: 1.5em;
}
/*------Page Errors------*/
#returnhome {
  padding: 0;
}
/*------Social Share------*/
#twittershare {
  padding: 0;
}
/*------Issues view------*/

.issue {
  display: none;
}
/* Wrapper title and date issue */
.issue__main_title {
  line-height: 1em;
  margin-bottom: .5em;
  padding: 0px 0px 0px .5em;
  word-break: break-word;
}
.issue__title {
  display: inline-block;
  vertical-align: middle;
}

/* btn back /index */
.issue__back {
  display: inline-block;
  vertical-align: middle;
  margin:0 .8em 0 0;
}
.issue__back:hover {
  text-decoration: none;
}
.issue__back .icon {
  display: inline-block;
  width: 1.25em;
  height: 1.25em;
  line-height: 1.25em;
  text-align: center;
  background-color: var(--wc-variant-background-light);
  color: #fff;;
  border-radius:50%;
  transition: all 0.3s linear 0s;
}
.issue__back:hover .icon {
  background-color: var(--wc-variant-background-dark);
  transition: all 0.3s linear 0s;
}
/* wrapper isssue */
.issue__wrapper {
	margin:0 0 0 4.2em;
}
/* 1180px */
@media all and (max-width: 73.74em){
  /* Issues view */
  .issue__wrapper {
	margin:0;
  }
}
.issue__create {
	font-size: 1.2em;
	margin:0 0 3em
}

/* State issue */
.issue__state {
	display: inline-block;
	padding: 7px 23px;
	color: #fff;
}
/*Needs Diagnosis*/
.issue__state--need {
	background-color: var(--wc-state-need);
}
/*Ready for Outreach*/
.issue__state--ready {
	background-color: var(--wc-state-ready);
}
/*Site wait*/
.issue__state--sitewait {
    background-color: var(--wc-state-sitewait);
}
/*Close*/
.issue__state--close {
	background-color: var(--wc-stat-close);
}
.issue__date {
	display: inline-block;
}

/* container details issue */
.issue__details {
    word-break: break-word;
    overflow: hidden;
}
.issue__details strong {
    font-weight: bold !important;
}
.issue__details img {
    width: 100%;
    max-width: 100%;
    height: 100%;
    max-height: 100%;
}

/* temp hack to hide <!-- browser info --> */
.issue__details > p:first-child {
  display: none;
}

/* To be deleted when issues are READ+WRITE*/
.issue__github_link {
  margin-top: 2.5em;
}

.issue__label:after {
	display: table;
	content: "";
	clear: both;
}
/* name of label */
.issue__label__title {
	font-weight: bold;
	font-size: 1.2em;
	float: left;
	margin-right:.6em;
}
/* value of label */
.issue__label__value {
	font-size: 1.2em;
	float: left;
}
/* btn add label */
.issue__label__btn {
	float: left;
	margin-left:1.2em;
	font-size: 1.2em;
	color: var(--wc-variant-background-light);
}

/*------Comment------*/
/*wrapper list comment */
.issue__comment {
	margin:4em 0 0;
}
/* wrapper comment issue */
.comment + .comment {
    margin-top:1em;
}
.comment:after {
    content: "";
    display: table;
    clear: both
}
/* case form */
.comment--form {
	padding-top:2em;
	margin:2em 0 0 ;
}

.comment__avatar,
.comment__body {
	float: left;
}
/* 990px */
@media all and (max-width: 61.865em) {
  .comment__avatar {
	  display: none;
  }
}
.comment__body {
	margin-left:.8em;
	position: relative;
}
/* ... */

